--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3"
+  },
+  "dependencies": {
+    "gitment": "0.0.3"
   }
 }
